Fix filename overflow in file browser component

--- a/resources/assets/sass/components/_fileBrowserFile.scss
+++ b/resources/assets/sass/components/_fileBrowserFile.scss
@@ -1,21 +1,18 @@
 .file-browser-file {
+    position: relative;
     padding: $padding-small-vertical;
     padding-left: $padding-small-horizontal + 17px;
     border-radius: $border-radius-small;
     word-wrap: break-word;
+    white-space: nowrap;
     height: 32px;
+    max-width: 100%;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 
     &:hover {
         color: white;
         background-color: $gray-lighter;
-    }
-
-    button {
-        display: none;
-    }
-
-    &:hover button {
-        display: block;
     }
 
     &.selected {
@@ -29,5 +26,16 @@
 
     a {
         color: $text-color;
+    }
+
+    .remove-button {
+        position: absolute;
+        top: $padding-small-vertical;
+        right: $padding-small-vertical;
+        display: none;
+    }
+
+    &:hover .remove-button {
+        display: block;
     }
 }
